--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,13 @@
-absl_py
-ipython
-matplotlib
-numpy
-scipy
-silx
-torch
-tqdm
+absl_py==2.1.0
+dill==0.3.8
+ipython==8.12.3
+joblib==1.3.2
+matplotlib==3.7.4
+numpy==1.24.4
+pandas==2.0.3
+pyDOE==0.3.8
+pyDOE==0.3.8
+scipy==1.15.2
+silx==1.1.2
+torch==2.1.2
+tqdm==4.66.1
